--- a/bring_u/templates/base.html
+++ b/bring_u/templates/base.html
@@ -48,6 +48,13 @@
                             <a class="nav-link" href="/profile" style="color: white">Profile</a>
                         </li>
                       {% endif %}
+
+                      <!-- base.html -->
+                      {% if unread_notifications %}
+                        <a class="navbar-brand pr-4 logo" href="{% url 'notifications' %}"><img src="/media/bell-nonread.png" alt="" height="20px"></a>
+                      {% else%}
+                        <a class="navbar-brand pr-4 logo" href="{% url 'notifications' %}"><img src="/media/bell.png" alt="" height="20px"></a>
+                      {% endif %}
                         <div class="navbar-nav ms-auto">
                             {% if user.is_authenticated %}
                             <a class="nav-link" href="{% url 'logoutaccount' %}">
