--- a/accounts/templates/loginaccount.html
+++ b/accounts/templates/loginaccount.html
@@ -1,8 +1,41 @@
 {% extends 'base.html' %}
 {% block content %}
+<style>
+    .card-title, p {
+
+        display: inline-block;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: fit-content;
+    }
+    .card-body{
+        width: fit-content;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        min-height: 100vh;
+        background-image: url(../../media/loginbackground.png);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center center;
+        justify-content: center;
+    }
+    .card-text {
+        width: fit-content;
+    }
+
+    .container {
+        display:flex;
+        justify-content: center;
+        padding: 0;
+    }
+</style>
 <div class="card mb-3">
     <div class="row g-0">
-        <div>
+        <div class="container">
             <div class="card-body">
                 <h5 class="card-title">Login</h5>
                 {% if error %}
@@ -10,13 +43,13 @@
                     {{ error }}
                 </div>
                 {% endif %}
-                <p class="card-text">
+                <div class="card-text">
                     <form method="POST">
                         {% csrf_token %}
                         {{ form.as_p }}
                         <button type="submit" class="btn btn-primary">Login</button>
                     </form>
-                </p>
+                </div>
             </div>
         </div>
     </div>
