--- a/bring_u/templates/home.html
+++ b/bring_u/templates/home.html
@@ -12,19 +12,19 @@
 <body>
   {% block content %}
   <div class="container mt-5">
-      <h1 class="bringu">BRING-U homepage</h1>
+    <h1 class="bringu">BRING-U homepage</h1>
   </div>
   <br>
   <br>
   <div class="barra-de-busqueda">
-      <div class="col-md-6">
-          <form class="d-flex" action="">
-              <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar" aria-label="Search">
-              <button class="btn btn-primary" type="submit">Buscar</button>
-            </form>
-          </div>
-        </div>
+    <div class="col-md-6">
+      <form class="d-flex" action="">
+        <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar" aria-label="Search">
+        <button class="btn btn-primary" type="submit">Buscar</button>
+      </form>
+    </div>
   </div>
+
   <br>
   <br>
   <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
@@ -48,7 +48,8 @@
         <span class="visually-hidden">Next</span>
       </button>
   </div>
-
+  <br>
+  <br>
   <div class="servicios-container">
     <a href="/my_request">
       <img class="imagenservicio" src="media\CustomOrder.png" alt="Imagen">
@@ -58,13 +59,14 @@
       <img class="imagenservicio" src="media\Business.png" alt="Imagen">
     </a>
   </div>
-  
+  <br>
+  <br>
   <div class="cards-container">
     <div class="card1">
       <img src="media\zyro-image1.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">#UneteATuCombo</h5>
-        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione deleniti voluptatum repudiandae expedita sapiente, enim consectetur, ullam amet quis, in molestias blanditiis earum similique? Qui dolorem illum eius fuga saepe.</p>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae modi esse sapiente consectetur amet recusandae. Quis quo consequuntur numquam!</p>
       </div>
       <div class="card-body">
         <a href="#" class="card-link">Ver Más...</a>
@@ -75,7 +77,7 @@
       <img src="media\dfbbd-editable-27-03.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Comparte en casa</h5>
-        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione deleniti voluptatum repudiandae expedita sapiente, enim consectetur, ullam amet quis, in molestias blanditiis earum similique? Qui dolorem illum eius fuga saepe.</p>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae modi esse sapiente consectetur amet recusandae. Quis quo consequuntur numquam!</p>
       </div>
       <div class="card-body">
         <a href="#" class="card-link">Ver Más...</a>
@@ -86,12 +88,23 @@
       <img src="media\RavxkYrKkHGBCYJ4b-x-750.jpg" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Comparte en casa</h5>
-        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione deleniti voluptatum repudiandae expedita sapiente, enim consectetur, ullam amet quis, in molestias blanditiis earum similique? Qui dolorem illum eius fuga saepe.</p>
+        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus repudiandae modi esse sapiente consectetur amet recusandae. Quis quo consequuntur numquam!</p>
       </div>
       <div class="card-body">
         <a href="#" class="card-link">Ver Más...</a>
       </div>
     </div>
+
+    <!-- <div class="card3">
+      <img src="media\lolitaprom.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Combo x18 Alfajores</h5>
+        <p class="card-text">Ricos alfajores de arequipe, chocolate, confitado y coco.</p>
+      </div>
+      <div class="card-body">
+        <a href="#" class="card-link">Ver Más...</a>
+      </div>
+    </div> -->
   </div>
   {% endblock %}
 </body>
