--- a/bring_u/templates/business.html
+++ b/bring_u/templates/business.html
@@ -16,41 +16,61 @@
       #clickable-container {
         cursor: pointer;
       }
+
+      .container {
+            display: flex;
+            flex-wrap: wrap;
+        }
+
+        .column {
+            flex: 0 0 33.33%;
+            box-sizing: border-box;
+            padding: 10px;
+        }
 </style>
  
 <body>
   {% extends "base.html" %}
   {% block content %}
+  <br>
     <h2 id="restaurant-list">Lista de negocios disponibles</h2>
-    <div class="container mt-5">
-      <div class="row justify-content-center">
-          <div class="col-md-6">
-              <form class="d-flex" action="">
-                  <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar un negocio" aria-label="Search">
-                  <button class="btn btn-primary" type="submit">Buscar</button>
-                </form>
-              </div>
-            </div>
+    
+    <div class="barra-de-busqueda">
+      <div class="col-md-6">
+        <form class="d-flex" action="">
+          <input class="form-control me-2" name="searchBusiness" type="text"  placeholder="Buscar" aria-label="Search">
+          <button class="btn btn-primary" type="submit">Buscar</button>
+        </form>
       </div>
-      <div id="searchReference">
-        <p>Searching for {{ searchBusiness }}</p>
-      </div>
-        {% for business in businesses %}
-        <div class="container mt-5" id="clickable-container" onclick="redirectToLink('{{business.id_business}}')">
-          <div class="row">
-              <div class="col-md-2">
-                  <img src="media\bigos_logo.png" alt="Image" class="img-fluid">
-              </div>
-              <div class="col-md-8">
-                  <ul class="list-group">
-                      <li class="list-group-item font-weight-bold">{{business.name}}</li>
-                      <li class="list-group-item">{{business.desc}}</li>
-                      <li class="list-group-item">Rating ★</li>
-                  </ul>
-              </div>
+    </div>
+    
+    <div id="searchReference">
+      <p>Searching for {{ searchBusiness }}</p>
+    </div>
+
+    <div class="container">
+      {% for business in businesses %}
+      <div class="column">
+
+        <div class="card" style="width: 18rem;">
+          <img src="{{ business.image.url }}" class="card-img-top" style="width: auto;" alt="{{ business.name }}">
+          <div class="card-body">
+            <h5 class="card-title" style="text-align: center;">{{business.name}}</h5>
+            <p class="card-text">{{business.desc}}</p>
           </div>
+          <ul class="list-group list-group-flush" style="text-align: center;">
+            <li class="list-group-item">★★★★</li>
+          </ul>
+          <div class="container mt-1" id="clickable-container" onclick="redirectToLink('{{business.id_business}}')">
+            <a class="card-link">Ver Más</a>
+          </div>
+        </div>
+
       </div>
       {%endfor%}
+    </div>
+
+      
     </div>
     <script>
       function redirectToLink(url) {
