--- a/bring_u/templates/static/home.css
+++ b/bring_u/templates/static/home.css
@@ -20,7 +20,7 @@
 }
 
 .barra-de-busqueda{
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     justify-content: center;
 }
@@ -40,7 +40,8 @@
 
 .imagenservicio{
     width: 400px; /* Tamaño fijo en píxeles */
-    max-width:40vw
+    max-width:40vw;
+    border-radius: 20%;
 }
 
 .cards-container {
@@ -54,10 +55,15 @@
     height: 320px;
 }
 
-.card1, .card2, .card3 {
-    width: 30vw;
+.card1, .card2, .card3, .card4 {
+    width: 25vw;
 }
 
 .card-img-top {
     width: 100%;
+}
+
+.card-img-top{
+    border-radius: 20%;
+    width: 20vw;
 }
