--- a/bring_u/templates/base.html
+++ b/bring_u/templates/base.html
@@ -23,7 +23,7 @@
                             <a class="nav-link" href="/" style="color: white">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: white">About</a>
+                            <a class="nav-link" href="/about_us" style="color: white">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/chat" style="color: white">Chat</a>
